# optlang_enumerator

./: cMCS_enumerator_test.py  pyproject.toml  setup.py
.github/workflows/: ci-tests.yml  python-app.yml  python-publish.yml
conda-recipe/: meta.yaml
examples/: ECC2comp.ipynb  ECC2comp_example.py
optlang_enumerator/: cMCS_enumerator.py  cobra_cnapy.py  mcs_computation.py
tests/: test_metatool_example.py
