[project]
name = "optlang_enumerator"
version = "0.0.13"
authors = [
  { name="Axel von Kamp", email="vonkamp@mpi-magdeburg.mpg.de" },
]
description = "Module for enumerating minimal cut sets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy==1.23.*", "scipy", "cobra>=0.29", "optlang", "efmtool_link>=0.0.6", "sympy>=1.12", "swiglpk"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/cnapy-org/optlang_enumerator"
Issues = "https://github.com/cnapy-org/optlang_enumerator/issues"
